--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 h1 {
     margin: 0px;
 }
@@ -30,4 +34,8 @@ h1 {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     text-align: center;
+}
+
+.hero-text > a {
+    margin: 0px 20px;
 }
